--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "keywords": [],
   "dependencies": {
     "@builderbot-plugins/openai-assistants": "^0.0.2",
-    "@builderbot/bot": "1.2.8",
-    "@builderbot/provider-baileys": "^1.2.8",
+    "@builderbot/bot": "1.3.5",
+    "@builderbot/provider-baileys": "1.3.5",
+    "builderbot-provider-sherpa": "0.1.0",
     "@deepgram/sdk": "^3.11.1",
     "@types/fs-extra": "^11.0.4",
-    "@whiskeysockets/baileys": "6.6.0",
+    "@whiskeysockets/baileys": "6.7.21",
     "axios": "^1.7.9",
     "docker": "^0.2.14",
     "dotenv": "^16.4.7",
